tests/files/type_checker_tests/should_pass/013.cmdr
//Test bindings type check
x = true;
y = x;
