tests/files/type_checker_tests/should_fail/076.cmdr
//Should fail using uninitialized variable
y = x;
